--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content='width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, user-scalable=no, shrink-to-fit=yes'>
-    <title>Unity WebGL Player | My project (2)</title>
+    <title>Unity WebGL Player | My project (3)</title>
     <link rel="stylesheet" href="TemplateData/style.css">
 
     <style>
@@ -74,7 +74,7 @@
     </div>
     <script src="arcamera.js" type="text/javascript"></script>
     <script src="itracker.js" type="text/javascript"></script>
-    <script src="Build/dsadasd.loader.js"></script>
+    <script src="Build/TestTestTest.loader.js"></script>
     <script>
             var initialize = async() =>{
                 var unityCanvas = document.querySelector("#unity-canvas");
@@ -107,12 +107,12 @@
                 
                 document.getElementById("startARDiv").style.display = "none";
                 createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/dsadasd.data",
-                    frameworkUrl: "Build/dsadasd.framework.js",
-                    codeUrl: "Build/dsadasd.wasm",
+                    dataUrl: "Build/TestTestTest.data",
+                    frameworkUrl: "Build/TestTestTest.framework.js",
+                    codeUrl: "Build/TestTestTest.wasm",
                     streamingAssetsUrl: "StreamingAssets",
                     companyName: "DefaultCompany",
-                    productName: "My project (2)",
+                    productName: "My project (3)",
                     productVersion: "0.1",
                     //webglContextAttributes: { "preserveDrawingBuffer": true },
                     // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
